[UPDT]Reorganizando rutas

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -178,6 +178,13 @@
 								</li>
 
 								<li class="sidebar-item">
+									<a class="sidebar-link" href="{{url_for('grupo_docentes')}}">
+										<img data-image="" src="https://img.icons8.com/metro/26/classroom.png"
+											alt="classroom" /> <span class="align-middle">Docentes por grupo</span>
+									</a>
+								</li>
+
+								<li class="sidebar-item">
 									<a class="sidebar-link" href="{{url_for('disponibilidad')}}">
 										<img data-image="" src="https://img.icons8.com/ios-filled/50/planning-skill.png"
 											alt="planning-skill" /> <span class="align-middle">Disponibilidad</span>
