--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -180,7 +180,58 @@
             </div>
         </div>
 
-        
+        <!-- <div class="row"> -->
+            <!-- Reporte de Cursos -->
+            <!-- <div class="col-12 col-lg-8 col-xxl-9 d-flex">
+                <div class="card flex-fill">
+                    <div class="card-header">
+                        <h5 class="card-title mb-0">Reporte de Cursos</h5>
+                    </div>
+                    <div class="table-responsive" style="max-height: 350px; overflow-y: auto;">
+                        <table class="table table-hover my-0">
+                            <thead class="table-header-fixed">
+                                <tr>
+                                    <th>Curso</th>
+                                    <th>Docente</th>
+                                    <th>Ambiente</th>
+                                    <th>Horario</th>
+                                    <th>Estado</th>
+                                </tr>
+                            </thead>
+                            <tbody id="reporte-cursos">
+                                <tr class="skeleton skeleton-table"><td colspan="5"></td></tr>
+                                <tr class="skeleton skeleton-table"><td colspan="5"></td></tr>
+                                <tr class="skeleton skeleton-table"><td colspan="5"></td></tr>
+                                <tr class="skeleton skeleton-table"><td colspan="5"></td></tr>
+                                <tr class="skeleton skeleton-table"><td colspan="5"></td></tr>
+                                <tr class="skeleton skeleton-table"><td colspan="5"></td></tr>
+                                <tr class="skeleton skeleton-table"><td colspan="5"></td></tr>
+                            </tbody>
+                            <div id="no-datos-reporte-cursos" class="text-center mt-2" style="display: none;">
+                                No hay datos disponibles
+                            </div>
+                        </table>
+                    </div>
+                </div>
+            </div> -->
+
+            <!-- Reporte de Ambientes por Edificio -->
+            <!-- <div class="col-12 col-lg-4 col-xxl-3 d-flex">
+                <div class="card flex-fill w-100">
+                    <div class="card-header">
+                        <h5 class="card-title mb-0">Ambientes por Edificio</h5>
+                    </div>
+                    <div class="card-body d-flex w-100">
+                        <div class="align-self-center chart chart-lg">
+                            <canvas class="skeleton skeleton-chart" id="chartjs-ambientes-por-edificio"></canvas>
+                            <div id="no-datos-ambientes-por-edificio" class="text-center mt-2" style="display: none;">
+                                No hay datos disponibles
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+        <!-- </div> -->
     </div>
 
     <style>
