--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -406,6 +406,7 @@
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.3.0/exceljs.min.js"></script>
 				<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
+				<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 
 
