--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -3,18 +3,18 @@
 {% block contenido %}
 <section class="section">
     <div class="container-fluid p-0">
-        <h1 class="h3 mb-3">Panel de <strong>Análisis</strong></h1>
+        <h1 class="h3 mb-3"><strong>Panel de  análisis</strong></h1>
 
-        <div class="row">
+        <div class="row border" >
             <div class="col-xl-6 col-xxl-4 d-flex">
                 <div class="w-100">
                     <div class="row">
                         <div class="col-sm-12">
-                            <div class="card">
+                            <div class="card border">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col mt-0">
-                                            <h5 class="card-title">Cursos Activos</h5>
+                                            <h5 class="card-title"><b>Cantidad de cursos activos del semestre académico 2024-I</b></h5>
                                         </div>
                                         <div class="col-auto">
                                             <div class="stat text-primary">
@@ -29,7 +29,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col mt-0">
-                                            <h5 class="card-title">Docentes Activos</h5>
+                                            <h5 class="card-title"><b>Cantidad de docentes activos del semestre académico 2024-I</b></h5>
                                         </div>
                                         <div class="col-auto">
                                             <div class="stat text-primary">
@@ -44,7 +44,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col mt-0">
-                                            <h5 class="card-title">Ambientes Disponibles</h5>
+                                            <h5 class="card-title"><b>Cantidad de ambientes disponibles del semestre académico 2024-I</b></h5>
                                         </div>
                                         <div class="col-auto">
                                             <div class="stat text-primary">
@@ -64,13 +64,13 @@
             <div class="col-xl-6 col-xxl-4 d-flex">
                 <div class="card flex-fill w-100">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Capacidad y Ocupación de Ambientes</h5>
+                        <h5 class="card-title mb-0">Capacidad y ocupación de ambientes del semestre académico 2024-I</h5>
                     </div>
                     <div class="table-responsive" style="max-height: 350px; overflow-y: auto;">
                         <table class="table table-hover my-0">
                             <thead class="table-header-fixed">
                                 <tr>
-                                    <th>Nombre del Ambiente</th>
+                                    <th>Nombre del ambiente</th>
                                     <th>Capacidad</th>
                                     <th>Estado</th>
                                 </tr>
@@ -96,7 +96,7 @@
             <div class="col-xl-6 col-xxl-4 d-flex">
                 <div class="card flex-fill w-100">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Cursos por Ciclo Académico</h5>
+                        <h5 class="card-title mb-0">Cantidad de cursos por ciclo del semestre académico  2024-I</h5>
                     </div>
                     <div class="card-body py-3">
                         <div class="chart chart-sm">
@@ -115,7 +115,7 @@
             <div class="col-12 col-md-6 col-xxl-3 d-flex order-2 order-xxl-3">
                 <div class="card flex-fill w-100">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Cursos por Tipo</h5>
+                        <h5 class="card-title mb-0">Cantidad de cursos por tipo del semestre académico 2024-I</h5>
                     </div>
                     <div class="card-body d-flex">
                         <div class="align-self-center w-100">
@@ -151,7 +151,7 @@
             <div class="col-12 col-md-12 col-xxl-6 d-flex order-3 order-xxl-2">
                 <div class="card flex-fill w-100">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Cursos por Docente</h5>
+                        <h5 class="card-title mb-0">Cantidad de cursos por docente</h5>
                     </div>
                     <div class="card-body px-4">
                         <canvas class="skeleton skeleton-chart" id="chartjs-cursos-docentes"></canvas>
@@ -166,7 +166,7 @@
             <div class="col-12 col-md-6 col-xxl-3 d-flex order-1 order-xxl-1">
                 <div class="card flex-fill">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Grupos por Semestre Academico</h5>
+                        <h5 class="card-title mb-0">Cantidad de grupos por semestre académico</h5>
                     </div>
                     <div class="card-body d-flex w-100">
                         <div class="align-self-center chart chart-lg">
