--- a/templates/dashboard/reporte_gruposdocente.html
+++ b/templates/dashboard/reporte_gruposdocente.html
@@ -72,7 +72,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
             <div class="card mb-4 w-100">
                 <div class="card-header bg-red-usat text-white">
-                    <h5 class="card-title text-white">Reporte Disponibilidad de Docentes</h5>
+                    <h5 class="card-title text-white">Cantidad de docentes con disponibilidad registrada y no registrada del  semestre académico 2024-I</h5>
                 </div>
                 <div class="card-body">
                     <canvas id="chartAmbiente"></canvas>
@@ -82,7 +82,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
             <div class="card mb-4 w-100">
                 <div class="card-header bg-red-usat text-white">
-                    <h5 class="card-title text-white">Reporte de Grupos Horario</h5>
+                    <h5 class="card-title text-white">Cantidad de grupos con horarios asignados y no asignados del semestre académico 2024-I</h5>
                 </div>
                 <div class="card-body">
                     <canvas id="chartDocente"></canvas>
